exports[`components/View prop "children" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={Object {}}>
  <div
    className="
  rn-alignItems:stretch
  rn-backgroundColor:transparent
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none"
    data-testid="1"
    style={Object {}} />
</div>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px

rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={
    Object {
      "pointerEvents": "box-only",
    }
  } />
`;

exports[`components/View prop "style" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={Object {}} />
`;

exports[`components/View prop "style" 2`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex


rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={
    Object {
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexGrow": 1,
      "flexShrink": 1,
    }
  } />
`;

exports[`components/View prop "style" 3`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column

rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={
    Object {
      "WebkitFlexShrink": 1,
      "flexShrink": 1,
    }
  } />
`;

exports[`components/View prop "style" 4`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex


rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={
    Object {
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 2,
      "flexGrow": 1,
      "flexShrink": 2,
    }
  } />
`;

exports[`components/View rendered element is a "div" by default 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  style={Object {}} />
`;

exports[`components/View rendered element is a "span" when inside <View accessibilityRole="button" /> 1`] = `
<button
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none"
  role="button"
  style={Object {}}
  type="button">
  <span
    className="
  rn-alignItems:stretch
  rn-backgroundColor:transparent
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none"
    style={Object {}} />
</button>
`;
